# xiaomi-AC2350-openwrt-install-selenium

./: .gitignore  README.md  default-wifi.sh  errors.txt  flash_firmware.sh  main.py  pyproject.toml  requirements.txt  scraper.py  tools.py  variables.py
