[tool.poetry]
name = "xiaomi-ac2350-openwrt-install-selenium"
version = "0.1.0"
description = ""
authors = ["Thibaud Labat"]
readme = "README.md"
packages = [{include = "xiaomi_ac2350_openwrt_install_selenium"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
selenium = "^4.12.0"
paramiko = "^3.3.1"
paramiko-expect = "^0.3.5"
scp = "^0.14.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
